Fix bug: modals not centred

--- a/web/less/modals.less
+++ b/web/less/modals.less
@@ -180,7 +180,7 @@ text-align: center;
     padding: 30px;
     width: 890px;
     height: 500px;
-    margin-left: -430px;
+    margin-left: -470px;
 
     &#email-page-form {
         width: 350px;
@@ -289,6 +289,7 @@ text-align: center;
         max-height: none;
     }
 }
+
 .modal-open .tooltip {
     z-index: 980;
 }
