--- a/web/less/responsive.less
+++ b/web/less/responsive.less
@@ -141,6 +141,7 @@
         }
         .modal {
             width: 990px;
+            margin-left: -520px;
 
             .left {
                 width: 480px;
